--- a/.github/workflows/pud.yml
+++ b/.github/workflows/pud.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: appleboy/gin-docker-demo
+        repository: wangch64/mytest
         dockerfile: Dockerfile
         always_pull: true
         tags: latest
